--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,6 @@
 @import "components/subscribe.sass"
 @import "components/footer.sass"
 
+@import "components/modal.sass"
 @import "global/global.sass"
     
