--- a/sass/components/_collection.sass
+++ b/sass/components/_collection.sass
@@ -1,17 +1,46 @@
 .collection
     color: #FDE5E6
-    justify-items: center
-    align-items: center
 
     &__headline
         height: 130px
         color: #11142D
-        background-color: beige
         position: relative
         font:
             size: 62px
             weight: bold
-            family: Mulish-Regular
+            family: Mulish-Bold
+
+    &__btn--left
+        position: absolute
+        right: 80px
+        top: 13px
+        background-image: url(../img/collection/btn-left.svg)
+        background-size: contain
+        border-radius: 25px
+        height: 48px
+        width: 48px
+        border: 0
+        transition: 0.3s linear
+
+    &__btn--right
+        position: absolute
+        right: 0
+        top: 13px
+        background-image: url(../img/collection/btn-right.svg)
+        background-size: contain
+        border-radius: 25px
+        height: 48px
+        width: 48px
+        border: 0
+        transition: 0.3s linear
+
+    &__btn--left:hover, &__btn--right:hover
+        background-color: #bebebe
+
+    &__models > div:hover
+        transition: 1s
+        opacity: 0.8
+        box-shadow: 0 0 10px rgba(0,0,0,0.5)
 
     &__models
         justify-content: center
@@ -21,8 +50,14 @@
         grid-template-columns: 400px 400px 400px
         grid-auto-rows: minmax(400px, auto)
 
+    &__models > div
+        opacity: 1
+        transition: 0.5s
+        background-position: center
+
     &__item
         margin-top: 188px
+        width: 250px
 
     &__name-model
         font-size: 48px
@@ -44,54 +79,32 @@
     &__model-1
         padding-left: 40px
         grid-area: 1 / 1 / 2 / 3
-        background-color: $secodaryColor
+        background-repeat: no-repeat
+        background-size: 100%
 
-    &__model2
+    &__model-2
         grid-area: 1 / 3 / 2 / 4
         background-color: #9bc850
+        background-repeat: no-repeat
 
-    &__model3
+    &__model-3
         grid-area: 2 / 1 / 3 / 2
         background-color: #a62e5c
 
-    &__model4
+    &__model-4
         grid-area: 2 / 2 / 3 / 3
         background-color: #2a9fbc
 
-    &__model5
+    &__model-5
         grid-area: 2 / 3 / 3 / 4
         background-color: #4e342e
 
-    &__btn--left
-        margin-top: 13px
-        position: absolute
-        right: 80px
-        background-image: url(/img/arrow-left.svg)
-        background-size: contain
-        border-radius: 25px
-        height: 48px
-        width: 48px
-        border: 0
-
-    &__btn--right
-        margin-top: 13px
-        position: absolute
-        right: 0
-        background-image: url(/img/arrow-right.svg)
-        background-size: contain
-        border-radius: 25px
-        height: 48px
-        width: 48px
-        border: 0
-
     @media (max-width: 1300px)
-        &__model5, &__model2
+        &__model-5, &__model-2
             display: none
-        
+
         &__models
             grid-template-columns: 400px 400px
-
-
 
 @media (min-width: 576px)
 
