--- a/sass/global/_global.sass
+++ b/sass/global/_global.sass
@@ -19,8 +19,10 @@ body
     width: 100%
     margin-top: 200px
 
+.hidden
+    display: none
+
 @media (max-width: 1300px)
     .container
         margin-top: 100px
         max-width: 816px
-
