--- a/sass/components/_experience.sass
+++ b/sass/components/_experience.sass
@@ -39,8 +39,8 @@
 @media (max-width: 1300px)
     .experience
         margin-top: $marginTopMediaMiddle
-        grid-template-columns: 400px 400px
-        height: 400px
+        grid-template-columns: 1fr 1fr
+        grid-template-rows: 70%
         gap: 16px
 
         &__value
