--- a/sass/components/_footer.sass
+++ b/sass/components/_footer.sass
@@ -73,3 +73,7 @@
 
     &-container__elem3-contacts p
         margin-left: 10px
+
+    @media (max-width: 1300px)
+        .footer__wrapper
+            max-width: 856px
