--- a/sass/components/_header.sass
+++ b/sass/components/_header.sass
@@ -8,13 +8,40 @@ a
     width: 100%
     color: white
 
-.navbar
+.header__block
     display: flex
     flex-direction: row
-    justify-content: space-between
     align-items: center
-    margin-top: 51px
-    margin-bottom: 110px
+    position: relative
+    margin-top: 36px
+    height: 56px
+
+.header__rectangle
+    width: 40px
+    height: 40px
+    background: #FDE5E6
+    border-radius: 50%
+
+.header__btn
+    background: #FA3C45
+    width: 158px
+    height: 48px
+    border: none
+    border-radius: 8px
+    margin-left: 32px
+
+.header__navbar
+    margin-left: 87px
+    height: auto
+
+.header__block-user
+    display: flex
+    flex-direction: row
+    position: absolute
+    right: 0
+
+.header .container
+    margin: 0 auto
 
 .header__wrapper
     display: flex
@@ -26,9 +53,10 @@ a
 .header-slider
     margin-top: 96px
 
-.company-name
+.header__company-name
     font-size: 24px
     margin-bottom: 16px
+    margin-top: 96px
 
 .slider-btn
     margin-top: 96px
@@ -66,9 +94,6 @@ a
         justify-content: space-between
         width: 190px
         height: 165px
-
-    &-container__logo
-        width: 136px
 
     &-container__elem2
         display: flex
@@ -108,3 +133,11 @@ a
     font-size: 16px
     line-height: 120%
     letter-spacing: 0.005em
+
+@media (max-width: 1300px)
+    .header__block-user
+        display: none
+
+    .header__navbar
+        margin-left: 40px
+    
