--- a/sass/components/_what-are-people.sass
+++ b/sass/components/_what-are-people.sass
@@ -37,11 +37,11 @@
 
 @media (max-width: 1300px)
     .what-are-people__block
-        grid-template-columns: 400px 400px
-    
+        grid-template-columns: 1fr 1fr
+
     .what-are-people__headlines
         font-size: 36px
 
     .what-are-people__description
-        margin-top: 41px
+        margin-top: 0px
         padding: 16px
