--- a/sass/global/_global.sass
+++ b/sass/global/_global.sass
@@ -25,4 +25,6 @@ body
 @media (max-width: 1300px)
     .container
         margin-top: 100px
-        max-width: 816px
+        padding-left: 50px
+        padding-right: 50px
+        max-width: 856px
