--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,6 @@
 @import "generic/_font-face.sass"
 @import "base/variables.sass"
+@import "components/logo.sass"
 @import "components/header.sass"
 @import "components/navbar.sass"
 @import "components/swiper.sass"
