--- a/sass/components/_collection.sass
+++ b/sass/components/_collection.sass
@@ -98,7 +98,7 @@
             display: none
 
         &__models
-            grid-template-columns: 400px 400px
+            grid-template-columns: 1fr 1fr
 
 @media (min-width: 576px)
 
