--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -4,6 +4,12 @@
     border: 0
     border-radius: 8px
     background-color: #FA3C45
+    font-weight: bold
+    font-size: 16px
+    line-height: 120%
+    text-align: center
+    letter-spacing: 0.005em
+    color: #FFFFFF
 
 .button:hover
         border: 2px solid #000000
