--- a/sass/components/_modal.sass
+++ b/sass/components/_modal.sass
@@ -12,6 +12,19 @@
         margin: 0 auto
         width: 800px
         height: 600px
+        background-size: 100%
+        background-repeat: no-repeat
 
     &::-webkit-scrollbar
         width: 0
+
+@media (max-width: 1300px)
+    .modal__content
+        width: 650px
+        height: 500px
+
+
+@media (max-width: 756px)
+    .modal__content
+        width: 500px
+        height: 350px
