--- a/sass/components/_select-car.sass
+++ b/sass/components/_select-car.sass
@@ -26,3 +26,7 @@
     @media (max-width: 1300px)
         &__select
             width: 264px
+
+@media (max-width: 768px)
+    .select-car
+        display: none
