--- a/sass/global/_global.sass
+++ b/sass/global/_global.sass
@@ -3,6 +3,9 @@
     margin: 0
     padding: 0
 
+a:hover
+    text-decoration: underline
+
 body
     width: 100%
     display: flex
@@ -28,3 +31,11 @@ body
         padding-left: 50px
         padding-right: 50px
         max-width: 856px
+
+@media (max-width: 768px)
+    .container
+        margin-top: 50px
+
+@media (max-width: 547px)
+    .container
+        width: 547px
