--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,6 +16,10 @@
 @import "components/download.sass"
 @import "components/subscribe.sass"
 @import "components/footer.sass"
+@import "components/header-second.sass"
+@import "components/contents.sass"
+@import "components/recommendation.sass"
+@import "components/aside.sass"
 
 @import "components/modal.sass"
 @import "global/global.sass"
