--- a/sass/components/_collection.sass
+++ b/sass/components/_collection.sass
@@ -10,37 +10,17 @@
             weight: bold
             family: Mulish-Bold
 
-    &__btn--left
-        position: absolute
-        right: 80px
-        top: 13px
-        background-image: url(../img/collection/btn-left.svg)
-        background-size: contain
-        border-radius: 25px
-        height: 48px
-        width: 48px
-        border: 0
-        transition: 0.3s linear
-
-    &__btn--right
-        position: absolute
-        right: 0
-        top: 13px
-        background-image: url(../img/collection/btn-right.svg)
-        background-size: contain
-        border-radius: 25px
-        height: 48px
-        width: 48px
-        border: 0
-        transition: 0.3s linear
-
     &__btn--left:hover, &__btn--right:hover
         background-color: #bebebe
 
     &__models > div:hover
         transition: 1s
-        opacity: 0.8
+        filter: brightness(120%)
         box-shadow: 0 0 10px rgba(0,0,0,0.5)
+
+    &__models div:not(:first-child) .collection__img
+        width: 130%
+        height: 100%
 
     &__models
         justify-content: center
@@ -80,6 +60,7 @@
         padding-left: 40px
         grid-area: 1 / 1 / 2 / 3
         background-size: 100%
+        position: relative
 
     &__model-2
         grid-area: 1 / 3 / 2 / 4
@@ -93,19 +74,53 @@
     &__model-5
         grid-area: 2 / 3 / 3 / 4
 
-    @media (max-width: 1300px)
-        &__model-5, &__model-2
-            display: none
+.collection__item
+    width: 100%
 
-        &__models
-            grid-template-columns: 1fr 1fr
+.collection__models > div
+    overflow: hidden
+    display: flex
+    justify-content: center
+    align-items: center
 
-@media (min-width: 576px)
+.collection__img--back
+    position: absolute
+    width: 100%
+    left: 0
+    z-index: -1000
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px)
+@media (max-width: 1300px)
 
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px)
+    .swiper-slide > .collection__model-5
+        display: none
 
-// Extra large devices (large desktops, 1200px and up)
+    .swiper-slide > .collection__model-2
+        display: none
+
+    .collection__models
+        grid-template-columns: 400px 400px
+
+@media (max-width: 768px)
+    .swiper-slide>.collection__model-4
+        display: none
+
+    .swiper-slide>.collection__model-3
+        display: none
+
+    .collection__headline
+        font-size: 42px
+        height: 100px
+
+    .collection__models
+        height: 100%
+        grid-template-columns: 100%
+        grid-auto-rows: 1fr
+
+@media (max-width: 547px)
+
+    .collection__models
+        grid-template-columns: 400px
+
+    .collection__headline
+        font-size: 32px
+
