--- a/sass/components/_download.sass
+++ b/sass/components/_download.sass
@@ -4,7 +4,6 @@
     height: 720px
     margin-top: 200px
 
-
     &__content
         display: grid
         grid-template-columns: 1fr 1fr
@@ -31,7 +30,7 @@
         right: 0
         width: 80%
 
-    .download__list
+    &__list
         margin-top: 58px
         color: $titleColor
         list-style-type: none
@@ -70,10 +69,43 @@
             max-width: 816px
             grid-template-columns: 400px 400px
             gap: 16px
-
+            justify-content: center
         &__Headline
             margin-top: 0px
             font-size: 40px
 
         &__img-phone
             height: 500px
+
+@media (max-width: 768px)
+
+    .download__Headline
+        margin-top: 20px
+
+    .download__content        
+        max-width: 816px
+        grid-template-columns: 500px
+        text-align: center
+
+    .download__link
+        justify-content: center
+        width: 100%
+        padding-top: 20px
+
+    .download__list
+        margin: 0 auto
+        margin-top: 30px
+        width: 200px
+        text-align: left
+        font-size: 20px
+        
+    .download__img-phone
+        display: none
+
+    .download__text
+        width: auto
+
+    .download__text-item
+        width: 100%
+        text-align: center
+        padding-top: 10px
