--- a/sass/components/_experience.sass
+++ b/sass/components/_experience.sass
@@ -4,7 +4,8 @@
     grid-template-columns: 1fr 1fr
     height: 544px
     grid-column-gap: 56px
-
+    justify-content: center
+    text-align: center
 
     &__headline
         margin-top: 63px
@@ -13,12 +14,13 @@
         margin-top: 32px
 
     &__foto
-        background-color: #2a9fbc
+        width: 100%
+        height: 100%
 
     &__data
         margin-top: 64px
         display: grid
-        grid-template-columns: auto  auto  auto
+        grid-template-columns: auto auto auto
         grid-column-gap: 88px
 
     &__value
@@ -31,7 +33,7 @@
 
     &--red
         color: #FA3C45
- 
+
     &__name
         display: inline-block
         margin-top: 16px
@@ -53,3 +55,11 @@
         &__data
             margin-top: 10px
             grid-column-gap: 20px
+
+@media (max-width: 768px)
+    .experience__foto
+        display: none
+
+    .experience
+        grid-template-columns: fit-content(500px)
+        height: auto
