--- a/sass/components/_navbar.sass
+++ b/sass/components/_navbar.sass
@@ -22,6 +22,21 @@
 .navbar__menu-list:hover .navbar__sub-menu-list
     display: block
 
+.navbar__burger-list
+    position: relative
+
+.navbar__burger-list-items
+    list-style-type: none
+    position: absolute
+    left: 100%
+    bottom: 0
+    display: none
+    width: 100%
+    background-color: #666666
+
+.navbar__burger-list:hover .navbar__burger-list-items
+    display: block
+
 .navbar__sub-menu-list
     display: none
     position: absolute
@@ -29,6 +44,115 @@
     top: 20px
     width: 100px
 
+.navbar__burger-menu
+    display: none
+    font-size: 31px
+
+.navbar__burger-menu a:hover
+    text-decoration: none
+
+.navbar__menu-btn
+    display: flex
+    align-items: center
+    position: absolute
+    top: 0
+    left: 0
+    width: 26px
+    height: 100%
+    cursor: pointer
+    z-index: 11
+
+    & > span,
+
+    & > span::before,
+
+    & > span::after
+        display: block
+        position: absolute
+        width: 100%
+        height: 3px
+        background-color: #d6d6d6
+        transition-duration: .25s
+
+    & > span::before
+        content: ''
+        top: -8px
+
+    & > span::after
+        content: ''
+        top: 8px
+
+.navbar__menubox
+    display: block
+    position: fixed
+    visibility: hidden
+    z-index: 10
+    top: 0
+    left: -100%
+    width: 300px
+    height: 100%
+    margin: 0
+    padding: 80px 0
+    list-style: none
+    background-color: #535353
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2)
+    transition-duration: .25s
+
+.navbar__menubox >li
+    margin: 10px
+    padding: 10px
+
+.navbar__burger-list-items >li
+    margin: 10px
+    padding: 10px
+
+.navbar__menubox>li:hover
+    background-color: $secodaryColor
+
+.navbar__burger-list-items>li:hover
+    background-color: $secodaryColor
+
+.navbar__menu-item
+    display: block
+    padding: 12px 24px
+    color: #333
+    font-family: 'Roboto', sans-serif
+    font-size: 20px
+    font-weight: 600
+    text-decoration: none
+    transition-duration: .25s
+
+    &:hover
+        background-color: #CFD8DC
+
+#navbar__menu-toggle
+    opacity: 0
+
+    &:checked ~ .navbar__menu-btn > span
+        transform: rotate(45deg)
+
+    &:checked ~ .navbar__menu-btn > span::before
+        top: 0
+        transform: rotate(0)
+
+    &:checked ~ .navbar__menu-btn > span::after
+        top: 0
+        transform: rotate(90deg)
+
+    &:checked ~ .navbar__menubox
+        visibility: visible
+        left: 0
+
 @media (max-width: 1300px)
     .navbar__menu li
         padding-right: 20px
+
+@media (max-width: 865px)
+    .navbar__menu li
+        padding-right: 10px
+
+@media (max-width: 768px)
+    .navbar__menu
+        display: none
+    .navbar__burger-menu
+        display: block
