--- a/sass/components/_top-brands.sass
+++ b/sass/components/_top-brands.sass
@@ -20,3 +20,7 @@
         padding-right: 20px
         margin-top: 40px
         height: 64px
+
+@media (max-width: 768px)
+    .top-brands
+        display: none
